lab1/Test/L1-A-13-16.output
Error Type A at Line 3
Error Type B at Line 3
Error Type B at Line 10
Error Type B at Line 12
Error Type A at Line 22
Error Type A at Line 25
Error Type B at Line 26
Error Type B at Line 30
Error Type B at Line 31
Error Type B at Line 42
