lab1/Test/L1-A-13-16.cmm
struct PRwpZdF9O rYY2 [ 1697420710 ] 
;
@int , q0eBbHSQz5eGy 

;
int ;
int ;
int d4H9 ( struct {
  int k ;
}omNFBi30dn_Snd8J != , struct xM94iT8PXWG2DvqVEuY3 
  UeAF28fal08wiAI7ZV ) {
  h7CQbLc < ;
{
    if ( TiqZmmyRQ ) {
    }else {
      struct AM {
      }rvopLs ;
      M3hFAyll24a ;
{
        int JgTBGF ;
        int Hvu0dQ3ATrCVpCw ;
        J8Cc260RvXwnypvjgle ^;
{
          int XjOvjEE0A ;
          int ~mWd1dL3m9dEOkN7Ysb ;
        }1633170961       }    }
    if ( Wc7EEKaQRjMzJmIqcH )     while ( ipbSrzC3kFFvUXTI7G 
      )     F3ygeUkZCCNHsqS 

else     if ( UOIreDNmiRtdcXNiC )     if ( yCCbusE9h 
      )     return [ RgeWrbKDO ;
else     I2cNS30Ea ;



  }}
int ;
float GaKagSreXiw3jFAq8 ( ) {
  int ddEQPzqD0d , qOJghqah3tid = Dhui6abM5LYE_8u 
    && mUcpKJKYY5 + apSWY7m8f7qKaPbDI3k ( YfyEF31S72OL7IlmuJR 
    = r3sp2MDYpKsxBO05CrIJ || VPwmjmwMYPRFwwoBk >= Z6PU7ufDc 
    - * ! hRtqYX2T3ZhD2I6 [ ki || h5he8ek2UOuaaTvV6K && 
    gWW_9fG3TZ6iUPUthFFc < ( mg89TyRLklFx7czQEk || n72zSNcLJFt40Z0 
    <= B ( z1yDrOK , i = uxvDkfKwUtqBIDiuvTJ != CTHsGep 
    / p7C7 ( D0JhMOep || NjMpy_RRZ9X == jPqE ) > ! ! XO2h1446I1pTY5nwQX 
    . IN8vl6RFJXLwse . u5RaD * ! ! DQXRph2D ) ) / 387682647 
    ] . PlxXUbOv5XYO8FN19 / 864218522.1335609210 * ! - 
    ejmz6tu ( ) ) ;
}
